<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="72dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <LinearLayout
        android:background="@drawable/curve_background_full_white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:src="@drawable/recda"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_weight="5">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:textStyle="bold"
                    android:text="@string/total"
                    android:textSize="20sp"/>


                <TextView
                    android:id="@+id/tv_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:textStyle="bold"
                    android:text="$0"
                    android:textSize="18sp"/>



            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_weight="5">


                <Button
                    android:id="@+id/tv_checkout"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="10sp"
                    android:textColor="@color/white"
                    android:background="@drawable/curve_background"
                    android:text="@string/checkout"/>



            </LinearLayout>



        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/grey"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="30dp"
                    android:textStyle="bold"
                    android:text="@string/subtotal"
                    android:textSize="16sp"/>


                <TextView
                    android:id="@+id/tv_subtotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:textStyle="bold"
                    android:text="$0"
                    android:textSize="16sp"/>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="30dp"
                    android:textStyle="bold"
                    android:text="@string/tax"
                    android:textSize="16sp"/>


                <TextView
                    android:id="@+id/tv_tax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:textStyle="bold"
                    android:text="$0"
                    android:textSize="16sp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="30dp"
                    android:textStyle="bold"
                    android:text="@string/service"
                    android:textSize="16sp"/>


                <TextView
                    android:id="@+id/tv_service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:textStyle="bold"
                    android:text="$0"
                    android:textSize="16sp"/>


            </LinearLayout>

        </LinearLayout>




    </LinearLayout>

</LinearLayout>