<?xml version="1.0" encoding="utf-8"?>


<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.CartScreen">



<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activities.CartScreen">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:weightSum="10"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center">
            <ImageView
                android:id="@+id/img_next"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="15dp"
                android:src="@drawable/arrow_leftanticon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="match_parent"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/shopingbag"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="18dp"/>


        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:layout_height="match_parent"
            android:gravity="center">

        </RelativeLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:id="@+id/ll_noitem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hey"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="20dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/grey"
            android:text="@string/noitem"
            android:gravity="center_vertical"
            android:textSize="14dp"/>

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_title"
        android:id="@+id/rv_cart"/>



</androidx.appcompat.widget.LinearLayoutCompat>
    <!-- Adding bottom sheet after main content -->
<include layout="@layout/bottom_sheet" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>